assets/css/_alerts.scss
div.alert {
  min-height: 70px;
  font-size: 15px;
  font-family: $braze-regular;
  border-radius: 0px;
  -webkit-border-radius: 0;
  padding: 0px;
  background-color: $white;
  border-width: 1px !important;
  border-style: solid !important;
  background-position: 0 50%;
  background-size: 70px 70px;
  background-repeat: no-repeat;
  background-color: $white ;
  color: $black-shark;
  b {
    font-family: $braze-medium;
    text-transform: capitalize;
  }
  p:first-of-type  {
    display: inline;
  }
  p{
    margin-bottom: 0px !important;
    line-height: 18px !important;
    padding-left: 0px !important;
  }
  div {
    &.alert-msg {
      padding: 15px 20px;
      margin: auto 0px auto 70px;
      min-height: 70px;
    }
  }
  &.alert-warning {
    b {
      color: $red-rose;
    }
    border-color: $pink-apricot;
    background-image: url(#{$base_url}/assets/img/message-warning.png) ;
    div.alert-msg {
      background-color: $pink-cinderella;
    }
  }
  &.alert-update{
    b {
      color: $yellow-gold;
    }
    border-color: $yellow-beige;
    background-image: url(#{$base_url}/assets/img/message-update.png) ;
    div.alert-msg {
      background-color: $yellow-cream;
    }
  }
  &.alert-checkpoint{
    b {
      color: $red-rose;
    }
    border-color: $pink-apricot;
    background-image: url(#{$base_url}/assets/img/message-stop.png) ;
    div.alert-msg {
      background-color: $pink-cinderella;
    }
  }
  &.alert-important{
    b {
      color: $purple-orchard;
    }
    border-color: $purple-lavender;
    background-image: url(#{$base_url}/assets/img/message-important.png) ;
    div.alert-msg {
      background-color: $purple-ghost;
    }
  }
  &.alert-note{

    b {
      color: $green-grass;
    }
    border-color: $green-pea;
    background-image: url(#{$base_url}/assets/img/message-note.png) ;
    div.alert-msg {
      background-color: $green-mint;
    }
  }
  &.alert-service-notice{
    b {
      color: $green-grass;
    }
    border-color: $green-pea;
    background-image: url(#{$base_url}/assets/img/message-note.png) ;
    div.alert-msg {
      background-color: $green-mint;
    }
  }
  &.alert-tip{
    b {
      color: $blue-scooter;
    }
    border-color: $blue-blizzard;
    background-image: url(#{$base_url}/assets/img/message-tip.png) ;
    div.alert-msg {
      background-color: $blue-silver;
    }
  }

  &.search-preview-notice {
    position: relative;
    min-height: 0;
    font-size: 14px;
    font-weight: 600;
    border-width: 1px;
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
    background-size: 40px 40px;
    background-position: 6px 50%;

    .search-preview-notice-dismiss {
      position: absolute;
      top: 8px;
      right: 8px;
      padding: 4px 8px;
      font-size: 18px;
      line-height: 1;
      font-weight: 400;
      color: inherit;
      background: transparent;
      border: none;
      cursor: pointer;
      opacity: 0.8;

      &:hover,
      &:focus {
        opacity: 1;
      }

      &:focus {
        outline: 2px solid currentColor;
        outline-offset: 2px;
      }
    }

    div.alert-msg {
      min-height: 0;
      padding: 12px 36px 12px 52px;
      margin-left: 40px;
      font-size: 14px;
      font-weight: 600;
      line-height: 1.35;
    }
  }
}

